--- a/localisation/useful_heirs_l_simp_chinese.yml
+++ b/localisation/useful_heirs_l_simp_chinese.yml
@@ -4,7 +4,7 @@
  edict_useful_heirs_2:0 "指定继承人"
  edict_useful_heirs_2_desc:0 "没有继承人对王国是一种危险。我必须指定一个继承人。"
  usefulheirs.2000.AI: "AI"
- usefulheirs.1000.name:0 "[root.GetHeirTitle][event_target:heir_leader.GetName]"
+ usefulheirs.1000.name:0 "[root.GetHeirTitle] §H[event_target:heir_leader.GetName]§!"
  usefulheirs.1000.desc:0 "您传唤我，[root.GetRulerTitle]?"
  usefulheirs.1000.a:0 "你需要在我们的帝国中累计经验。"
  usefulheirs.1000.a.tooltip:0 "我们将能够指派我们的继承人在我们的帝国内担任领导职务。"
@@ -21,10 +21,9 @@
  usefulheirs.2000.c:0 "作为陆军上将。"
  usefulheirs.2000.d:0 "作为我们帝国内的科学家。"
  usefulheirs.2000.e:0 "事实上，你不需要承担任何其他责任。"
- usefulheirs.3000.name:0 "[root.GetHeirTitle][event_target:heir_leader.GetName]"
  usefulheirs.3000.desc:0 "[root.GetRulerTitle]，我请求你重新考虑一下！"
  usefulheirs.3000.ad.desc:0 "当然可以，[root.GetRulerTitle]"
- usefulheirs.3100.name:0 "[root.GetRulerTitle][root.ruler.GetName]"
+ usefulheirs.3100.name:0 "[root.GetRulerTitle] §H[root.ruler.GetName]§!"
  usefulheirs.3100.desc:0 "谁配做我的继承人？"
  usefulheirs.3000.a:0 "我们的一位总督将是我的继承人。"
  usefulheirs.3000.b:0 "我们的一位舰队司令将是我的继承人。"
