--- a/localisation/useful_heirs_l_english.yml
+++ b/localisation/useful_heirs_l_english.yml
@@ -31,17 +31,16 @@
  usefulheirs.2000.name_color_deactivated.tooltip:0 "Activating this will make your heir's name §Horange§! if you assign them as a leader. Once their name is §Horange§!, it will be §Horange§! for the rest of their life."
  usefulheirs.2000.name_color_activated:0 "Heir Name Color: §HOrange§!"
 
- usefulheirs.3000.name:0 "[root.GetHeirTitle] [event_target:heir_leader.GetName]"
  usefulheirs.3000.desc:0 "My [root.GetRulerTitle], I beg you to reconsider!"
  usefulheirs.3000.ad.desc:0 "Of course, my [root.GetRulerTitle]."
 
- usefulheirs.3100.name:0 "[root.GetRulerTitle] [root.ruler.GetName]"
+ usefulheirs.3100.name:0 "[root.GetRulerTitle] §H[root.ruler.GetName]§!"
  usefulheirs.3100.desc:0 "Who is worthy to be my heir?"
 
- usefulheirs.3000.a:0 "One of our Governors shall be my heir."
- usefulheirs.3000.b:0 "One of our Admirals shall be my heir."
- usefulheirs.3000.c:0 "One of our Generals shall be my heir."
- usefulheirs.3000.d:0 "One of our Scientists shall be my heir."
+ usefulheirs.3000.a:0 "One of our §YGovernors! shall be my heir."
+ usefulheirs.3000.b:0 "One of our §YAdmirals! shall be my heir."
+ usefulheirs.3000.c:0 "One of our §YGenerals! shall be my heir."
+ usefulheirs.3000.d:0 "One of our §YScientists§! shall be my heir."
  usefulheirs.3000.e:0 "The next in the line of succession shall take your place."
  usefulheirs.3000.f:0 "Perhaps you may still prove yourself."
  usefulheirs.3000.f.ad:0 "The time is not yet right."
