--- a/localisation/useful_heirs_l_braz_por.yml
+++ b/localisation/useful_heirs_l_braz_por.yml
@@ -1,10 +1,10 @@
-﻿l_english:
+﻿# l_english:
 # l_spanish:
 # l_german:
 # l_french:
 # l_polish:
 # l_russian:
-# l_braz_por:
+l_braz_por:
 # l_simp_chinese:
 
  edict_useful_heirs_1:0 "Summon my Heir"
