--- a/localisation/‏‏useful_heirs_l_russian.yml
+++ b/localisation/‏‏useful_heirs_l_russian.yml
@@ -85,4 +85,4 @@ l_russian:
 
  response_excellent:0 "Великолепно!"
 
- influencefail_text_useful_heirs:0 "§RRequires§! §Y500§! £influence£ §HInfluence§!"
+ unity_fail_text:0 "§RRequires§! §Y500§! £influence£ §HInfluence§!"
