--- a/localisation/useful_heirs_l_english.yml
+++ b/localisation/useful_heirs_l_english.yml
@@ -6,6 +6,8 @@
 # l_russian:
 # l_braz_por:
 # l_simp_chinese:
+# l_korean:
+# l_japanese:
 
  edict_useful_heirs_1:0 "Summon my Heir"
  edict_useful_heirs_1_desc:0 "There are matters that must be disccused with my heir."
@@ -22,7 +24,7 @@
  usefulheirs.1000.name:0 "[root.GetHeirTitle] §H[event_target:heir_leader.GetName]§!"
  usefulheirs.1000.desc:0 "You summoned me, my §Y[root.GetRulerTitle]§!?"
 
- usefulheirs.1000.a:0 "You need to gain experience within our empire."
+ usefulheirs.1000.a:0 "I need you to take on a different role."
  usefulheirs.1000.a.tooltip:0 "Will we will able to assign our heir to a leadership position within our empire."
  usefulheirs.1000.b:0 "You are unworthy of being my heir."
  usefulheirs.1000.b.ad:0 "The time has come for me to designate an heir."
@@ -31,16 +33,12 @@
  usefulheirs.1000.c.tooltip:0 "We will retire and our heir shall take over."
  usefulheirs.1000.d:0 "Nevermind."
 
- usefulheirs.2000.desc:0 "How may I best serve you and the §Y[Root.GetName]§!?"
+ usefulheirs.2000.cesc:0 "How may I best serve you and the §Y[Root.GetName]§!?"
 
- usefulheirs.2000.a:0 "As a Governor of one of our sectors."
- usefulheirs.2000.b:0 "As an Admiral in our navy."
- usefulheirs.2000.c:0 "As a General in our army."
- usefulheirs.2000.d:0 "As a Scientist within our empire."
- usefulheirs.2000.back:0 "Actually, you don't need any other resposibilities."
- usefulheirs.2000.name_color_deactivated:0 "Heir Name Color: §EDefault§!"
- usefulheirs.2000.name_color_deactivated.tooltip:0 "Activating this will make your heir's name §Horange§! if you assign them as a leader. Once their name is §Horange§!, it will be §Horange§! for the rest of their life."
- usefulheirs.2000.name_color_activated:0 "Heir Name Color: §HOrange§!"
+ usefulheirs.2000.a:0 "As an $official_with_icon$"
+ usefulheirs.2000.b:0 "As a $commander_with_icon$"
+ usefulheirs.2000.c:0 "As a $scientist_with_icon$"
+ usefulheirs.2000.back:0 "Actually, your current role is fine."
 
  usefulheirs.3000.desc:0 "My [root.GetRulerTitle], I beg you to reconsider!"
  usefulheirs.3000.ad.desc:0 "Of course, my [root.GetRulerTitle]."
@@ -48,18 +46,16 @@
  usefulheirs.3100.name:0 "[root.GetRulerTitle] §H[root.ruler.GetName]§!"
  usefulheirs.3100.desc:0 "Who is worthy to be my heir?"
 
- usefulheirs.3000.a:0 "One of our §YGovernors§! shall be my heir."
- usefulheirs.3000.b:0 "One of our §YAdmirals§! shall be my heir."
- usefulheirs.3000.c:0 "One of our §YGenerals§! shall be my heir."
+ usefulheirs.3000.a:0 "One of our §YOfficials§! shall be my heir."
+ usefulheirs.3000.b:0 "One of our §YCommanders§! shall be my heir."
  usefulheirs.3000.d:0 "One of our §YScientists§! shall be my heir."
  usefulheirs.3000.e:0 "The next in the line of succession shall take your place."
  usefulheirs.3000.f:0 "Perhaps you may still prove yourself."
  usefulheirs.3000.f.ad:0 "The time is not yet right."
 
- usefulheirs.3110.name: "Governors"
- usefulheirs.3120.name: "Admirals"
- usefulheirs.3130.name: "Generals"
- usefulheirs.3140.name: "Scientists"
+ usefulheirs.3110.name: "Officials"
+ usefulheirs.3120.name: "Commanders"
+ usefulheirs.3130.name: "Scientists"
  usefulheirs.3110.desc: "Who is worthy of being heir to the empire?"
 
  usefulheirs.3110.back: "None are worthy."
@@ -74,30 +70,35 @@
  usefulheirs.3110.heir_maybe_9: "§Y[heir_maybe_9.GetName]§!"
  usefulheirs.3110.heir_maybe_10: "§Y[heir_maybe_10.GetName]§!"
 
- usefulheirs.3500.name: "§YCoronation Preparations§!"
- usefulheirs.3500.desc: "As we prepare for the coronation of §H[new_chosen_heir.GetName]§!, the decision must be made as to whether or not they will join the imperial House. If not, they shall keep their old name."
+ usefulheirs.3400.name: "§YDynastic Concerns§!"
+ usefulheirs.3400.desc: "As we prepare for the coronation of §H[new_chosen_heir.GetName]§!, the decision must be made as to whether or not they will join the Imperial dynasty. If not, they shall keep their old name."
 
- usefulheirs.3500.no_name_change: "They shall keep the name they were born with."
- usefulheirs.3500.yes_name_change: "They shall join the House of §H[event_target:dynastic_name_leader.GetName]§! and adopt our name."
- usefulheirs.3500.yes_name_change.tooltip: "§H[new_chosen_heir.GetName]§! will adopt the §H[event_target:dynastic_name_leader.GetName]§! name and become §H[new_chosen_heir.GetName] [event_target:dynastic_name_leader.GetName]§!."
+ usefulheirs.3400.no_name_change: "They shall keep the name they were born with."
+ usefulheirs.3400.yes_name_change: "They shall join the House of §H[event_target:dynastic_name_leader.GetName]§! and adopt our name."
+ usefulheirs.3400.yes_name_change.tooltip: "§H[new_chosen_heir.GetName]§! will adopt the §H[event_target:dynastic_name_leader.GetName]§! name and become §H[new_chosen_heir.GetName] [event_target:dynastic_name_leader.GetName]§!."
 
- usefulheirs.3500.new_heir_name: "[this.GetName] [event_target:dynastic_name_leader.GetName]"
+ usefulheirs.3400.new_heir_name: "[this.GetName] [event_target:dynastic_name_leader.GetName]"
  saved_dynastic_name: "[root.ruler.GetSecondName]"
  new_dynastic_name: "[root.GetName]"
 
- usefulheirs.3501.name: "§YNew Heir Apparent§!"
- usefulheirs.3501.desc: "A grand coronation ceremony was held today in the capital, and broadcast throughout our empire. §H[new_chosen_heir.GetName]§! has been proclaimed the new §Y[root.GetHeirTitle]§!, and is now §Yheir§! to the throne. As expected with a change of this magnitude, there are those throughout the realm that have been expressing their discontent. The former §Yheir§!, §H[disinherited_heir.GetName]§!, still has their supporters. Hopefully this discontent will die down in time."
- usefulheirs.3501.ad.desc: "In line with our customs and traditions, a grand coronation ceremony was held today in the capital, and broadcast throughout our empire. §H[new_chosen_heir.GetName]§! has been proclaimed the new §Y[root.GetHeirTitle]§!, and is now heir to the throne."
+ usefulheirs.3500.name: "§YNew Heir Presumptive§!"
+ usefulheirs.3500.desc: "A grand coronation ceremony was held today in the capital, and broadcast throughout our empire. §H[new_chosen_heir.GetName]§! has been proclaimed the new §Y[root.GetHeirTitle]§!, and is now §Yheir§! to the throne. As would be expected with a change of this magnitude, there are those throughout the realm that have been expressing their discontent. The former §Yheir§!, §H[disinherited_heir_fatherland.GetName]§!§H[disinherited_heir.GetName]§!, still has their supporters. Hopefully this discontent will die down in time." #This is a convenient little trick
+ usefulheirs.3500.ad.desc: "In line with our customs and traditions, a grand coronation ceremony was held today in the capital, and broadcast throughout our empire. §H[new_chosen_heir.GetName]§! has been proclaimed the new §Y[root.GetHeirTitle]§!, and is now heir to the throne."
 
- usefulheirs.3810.name: "§RDynastic Heir Ascends§!"
- usefulheirs.3810.desc: "In a break with tradition, our previous ruler passed away without desginating an heir. As the next in the dynastic line of succession, §H[ruler.GetName]§! has ascended to the throne. This has caused widespread unease, with the populace worried that the newly-crowned §Y[root.GetRulerTitle]§! §H[root.ruler.GetName]§! will not be up to the task."
+ uh_adoptive.1110.name: "§RDynastic Heir Ascends§!"
+ uh_adoptive.1110.desc: "In a break with tradition, our previous ruler passed away without desginating an heir. As the next in the dynastic line of succession, §H[ruler.GetName]§! has ascended to the throne. This has caused widespread unease, with the populace worried that the newly-crowned §Y[root.GetRulerTitle]§! §H[root.ruler.GetName]§! will not be fit for the job."
 
- usefulheirs.3810.a: "We will prove ourselves."
+ uh_adoptive.1110.a: "We will prove ourselves."
 
- usefulheirs.3910.name: "§RDesignated Heir Dies§!"
- usefulheirs.3910.desc: "In a great loss to the empire, [deceased_heir.GetTitle] §H[deceased_heir.GetName]§!, the §Yheir apparent§!, has passed away. A new §Yheir§! will need to be appointed."
+ uh_adoptive.2010.name: "§RDesignated Heir Dies§!"
+ uh_adoptive.2010.desc: "In a great loss to the empire, [deceased_heir.GetTitle] §H[deceased_heir.GetName]§!, the §YHeir Presumptive§!, has passed away. A new §Yheir§! will need to be appointed."
 
- usefulheirs.3910.a: "Tragic."
+ uh_adoptive.2010.a: "Tragic."
+
+ uh_adoptive.3015.name: "§RDynastic Succession Restored§!"
+ uh_adoptive.3015.desc: "In a grand speech before the nation today, §Y[root.GetRulerTitle]§! §H[ruler.GetName]§! announced decision to break with tradition and reinstate dynastic succession. This decision has not been well-received amongst our populace. They fear that, as in the past, the throne will eventually pass to someone unworthy of the responsibility."
+
+ uh_adoptive.3015.a: "Our line will prove themselves."
 
  heir_fired_name:0 "[event_target:clone_leader_name_1.GetName]"
  heir_name_bold:0 "§H[event_target:heir_leader.GetName]§!"
@@ -115,9 +116,8 @@
  usefulheirs.4010.name:0 "[root.GetHeirTitle] [event_target:heir_leader.GetName]"
  usefulheirs.4010.desc:0 "If that is what you wish. I won't dissapoint you. What do you want to do?"
 
- usefulheirs.4010.a:0 "I will preside over one of our sectors as a Governor."
- usefulheirs.4010.b:0 "I will lead one of our fleets as an Admiral."
- usefulheirs.4010.c:0 "I will lead our troops as a General."
+ usefulheirs.4010.a:0 "I will serve as an Official within our realm."
+ usefulheirs.4010.b:0 "I will lead our troops as a Commander."
  usefulheirs.4010.d:0 "I will pursue knowledge as a Scientist."
 
 
@@ -126,12 +126,16 @@
  response_they_shall_accept:0 "They will accept it."
  response_excellent:0 "Excellent"
 
+ dis_heir_reg: "[event_target:disinherited_heir.GetName]"
+ dis_heir_fatherland: "[event_target:disinherited_heir_fatherland.GetName]"
+
  unity_fail_text:0 "§RRequires§! §Y[Root.monthly_unity_prod]§! £unity£ §YUnity§!"
 
  ### Civics
  civic_adoptive_dynasties: "Adoptive Dynasties"
  civic_adoptive_dynasties_desc: "A dynasty of inneffective rulers in the distant past has led to a tradition in this society whereby the monarch typically appoints their heir from amongst the most capable individuals in their court. This has resulted in a very stable empire. However, until an heir is appointed, the heir is still chosen via absolute primogeniture."
- civic_tooltip_adoptive_dynasties_effects: "No £stability£ §YStability§! penalty or £influence£ §YInfluence§! cost to designate an heir. A non-designated heir becoming ruler will lower £stability£ §YStability§! for §R10§! years by §Y20§! on every planet except the capital, where stability will be lowered by §Y25§!."
+ civic_tooltip_adoptive_dynasties_effects: "No £stability£ §YStability§! penalty or £influence£ §YInfluence§! cost to designate an heir."
+ civic_tooltip_adoptive_dynasties_negative_effects: "A non-designated heir becoming ruler will lower £stability£ §YStability§! for §Y10 years§! by §R20§! on every planet except the capital, where stability will be lowered by §R25§!."
 
  civic_tooltip_heir:0 "Must have an §YHeir§!"
 
@@ -147,3 +151,10 @@
 
  dynastic_heir_capital: "Dynastic Ruler"
  dynastic_heir_capital_desc: "Due to trauma from the past, the ascension of a dynastic heir has caused a considerable amount of distress in the capital."
+
+ # Councilors
+ councilor_adoptive_dynasties:0 "Heir Presumptive"
+ councilor_adoptive_dynasties_female:0 "Heir Presumptive"
+ councilor_adoptive_dynasties_desc:0 "In order to prepare for their eventual succession, the $TITLE$ receives extensive training on how to manage the realm."
+ mod_councilor_adoptive_dynasties_exp_gain: "$councilor_adoptive_dynasties_official_with_icon$ $exp_gain$"
+ councilor_adoptive_dynasties_official_with_icon:0 "£ruler£ $councilor_adoptive_dynasties$"
