--- a/localisation/useful_heirs_l_japanese.yml
+++ b/localisation/useful_heirs_l_japanese.yml
@@ -1,13 +1,13 @@
 ﻿# l_english:
 # l_spanish:
 # l_german:
-l_french:
+# l_french:
 # l_polish:
 # l_russian:
 # l_braz_por:
 # l_simp_chinese:
 # l_korean:
-# l_japanese:
+l_japanese:
 
  edict_useful_heirs_1:0 "Summon my Heir"
  edict_useful_heirs_1_desc:0 "There are matters that must be disccused with my heir."
@@ -15,10 +15,14 @@ l_french:
  edict_useful_heirs_2:0 "Appoint Heir"
  edict_useful_heirs_2_desc:0 "The absence of an heir is a danger to the realm. I must appoint an heir."
 
+ decision_set_dynasty_name: "Begin New Dynasty"
+ decision_set_dynasty_name_desc: "We will forge ahead into the future under the care of a new dynasty."
+ decision_set_dynasty_name_tooltip: "This decision will change our dynasty name §Yto that of our capital§!. Should we choose to adopt an heir, we will have the ability to have that heir take this new dynasty name.\n\n Dynasty name will become: §H[root.GetName]§!"
+
  usefulheirs.2000.AI: "AI"
 
  usefulheirs.1000.name:0 "[root.GetHeirTitle] §H[event_target:heir_leader.GetName]§!"
- usefulheirs.1000.desc:0 "You summoned me, [root.GetRulerTitle]?"
+ usefulheirs.1000.desc:0 "You summoned me, my §Y[root.GetRulerTitle]§!?"
 
  usefulheirs.1000.a:0 "I need you to take on a different role."
  usefulheirs.1000.a.tooltip:0 "Will we will able to assign our heir to a leadership position within our empire."
@@ -29,7 +33,7 @@ l_french:
  usefulheirs.1000.c.tooltip:0 "We will retire and our heir shall take over."
  usefulheirs.1000.d:0 "Nevermind."
 
- usefulheirs.2000.cesc:0 "How may I best serve you and the [Root.GetName]?"
+ usefulheirs.2000.cesc:0 "How may I best serve you and the §Y[Root.GetName]§!?"
 
  usefulheirs.2000.a:0 "As an $official_with_icon$"
  usefulheirs.2000.b:0 "As a $commander_with_icon$"
@@ -78,11 +82,11 @@ l_french:
  new_dynastic_name: "[root.GetName]"
 
  usefulheirs.3500.name: "§YNew Heir Presumptive§!"
- usefulheirs.3500.desc: "A grand coronation ceremony was held today in the capital, and broadcast throughout our empire. §H[new_chosen_heir.GetName]§! has been proclaimed the new §Y[root.GetHeirTitle]§!, and is now §Yheir§! to the throne. As expected with a change of this magnitude, there are some in the empire that have been expressing their discontent. The former §Yheir§!, §H[disinherited_heir_first.GetName]§!, still has their supporters. However, this discontent is likely to die down given enough time."
+ usefulheirs.3500.desc: "A grand coronation ceremony was held today in the capital, and broadcast throughout our empire. §H[new_chosen_heir.GetName]§! has been proclaimed the new §Y[root.GetHeirTitle]§!, and is now §Yheir§! to the throne. As expected with a change of this magnitude, there are those throughout the realm that have been expressing their discontent. The former §Yheir§!, §H[disinherited_heir.GetName]§!, still has their supporters. Hopefully this discontent will die down in time."
  usefulheirs.3500.ad.desc: "In line with our customs and traditions, a grand coronation ceremony was held today in the capital, and broadcast throughout our empire. §H[new_chosen_heir.GetName]§! has been proclaimed the new §Y[root.GetHeirTitle]§!, and is now heir to the throne."
 
  uh_adoptive.1110.name: "§RDynastic Heir Ascends§!"
- uh_adoptive.1110.desc: "In a break with tradition, §H[deceased_ruler.GetName]§! passed away without desginating an heir. As the next in the dynastic line of succession, §H[root.ruler.GetName]§! has ascended to the throne. This has caused widespread unease, with the populace worried that the newly-crowned §Y[root.GetRulerTitle]§! §H[root.ruler.GetName]§! will not be up to the task."
+ uh_adoptive.1110.desc: "In a break with tradition, our previous ruler passed away without desginating an heir. As the next in the dynastic line of succession, §H[ruler.GetName]§! has ascended to the throne. This has caused widespread unease, with the populace worried that the newly-crowned §Y[root.GetRulerTitle]§! §H[root.ruler.GetName]§! will not be fit for the job."
 
  uh_adoptive.1110.a: "We will prove ourselves."
 
@@ -93,6 +97,8 @@ l_french:
 
  uh_adoptive.3015.name: "§RDynastic Succession Restored§!"
  uh_adoptive.3015.desc: "In a grand speech before the nation today, §Y[root.GetRulerTitle]§! §H[ruler.GetName]§! announced decision to break with tradition and reinstate dynastic succession. This decision has not been well-received amongst our populace. They fear that, as in the past, the throne will eventually pass to someone unworthy of the responsibility."
+
+ uh_adoptive.3015.a: "Our line will prove themselves."
 
  heir_fired_name:0 "[event_target:clone_leader_name_1.GetName]"
  heir_name_bold:0 "§H[event_target:heir_leader.GetName]§!"
@@ -127,6 +133,8 @@ l_french:
  civic_adoptive_dynasties_desc: "A dynasty of inneffective rulers in the distant past has led to a tradition in this society whereby the monarch typically appoints their heir from amongst the most capable individuals in their court. This has resulted in a very stable empire. However, until an heir is appointed, the heir is still chosen via absolute primogeniture."
  civic_tooltip_adoptive_dynasties_effects: "No £stability£ §YStability§! penalty or £influence£ §YInfluence§! cost to designate an heir."
  civic_tooltip_adoptive_dynasties_negative_effects: "A non-designated heir becoming ruler will lower £stability£ §YStability§! for §Y10 years§! by §R20§! on every planet except the capital, where stability will be lowered by §R25§!."
+
+ civic_tooltip_heir:0 "Must have an §YHeir§!"
 
  # Modifiers
  chose_new_heir: "New Heir"
