--- a/localisation/useful_heirs_l_simp_chinese.yml
+++ b/localisation/useful_heirs_l_simp_chinese.yml
@@ -6,6 +6,8 @@
 # l_russian:
 # l_braz_por:
 l_simp_chinese:
+# l_korean:
+# l_japanese:
 
  edict_useful_heirs_1:0 "传唤我的继承人"
  edict_useful_heirs_1_desc:0 "有些事情必须和我的继承人商量。"
@@ -14,7 +16,7 @@ l_simp_chinese:
  usefulheirs.2000.AI: "AI"
  usefulheirs.1000.name:0 "[root.GetHeirTitle] §H[event_target:heir_leader.GetName]§!"
  usefulheirs.1000.desc:0 "您传唤我，[root.GetRulerTitle]?"
- usefulheirs.1000.a:0 "你需要在我们的帝国中累计经验。"
+ usefulheirs.1000.a:0 "我需要你扮演一个不同的角色。"
  usefulheirs.1000.a.tooltip:0 "我们将能够指派我们的继承人在我们的帝国内担任领导职务。"
  usefulheirs.1000.b:0 "你不配做我的继承人"
  usefulheirs.1000.b.ad:0 "现在是我指定继承人的时候了。"
@@ -23,11 +25,10 @@ l_simp_chinese:
  usefulheirs.1000.c.tooltip:0 "我们将退位，我们的继承人将接任。"
  usefulheirs.1000.d:0 "没关系。"
  usefulheirs.2000.name:0 "[root.GetHeirTitle][event_target:heir_leader.GetName]"
- usefulheirs.2000.desc:0 "我今天该如何为[Root.GetName]效力？"
- usefulheirs.2000.a:0 "作为我们一个星域的总督"
- usefulheirs.2000.b:0 "作为舰队司令。"
- usefulheirs.2000.c:0 "作为陆军上将。"
- usefulheirs.2000.d:0 "作为我们帝国内的科学家。"
+ usefulheirs.2000.cesc:0 "我今天该如何为[Root.GetName]效力？"
+ usefulheirs.2000.a:0 "作为$official_with_icon$"
+ usefulheirs.2000.b:0 "作为$commander_with_icon$"
+ usefulheirs.2000.c:0 "作为$scientist_with_icon$"
  usefulheirs.2000.e:0 "事实上，你不需要承担任何其他责任。"
  usefulheirs.3000.desc:0 "[root.GetRulerTitle]，我请求你重新考虑一下！"
  usefulheirs.3000.ad.desc:0 "当然可以，[root.GetRulerTitle]"
@@ -42,8 +43,6 @@ l_simp_chinese:
  usefulheirs.3000.f.ad:0 "时机尚未成熟。"
  usefulheirs.3110.name: "总督"
  usefulheirs.3120.name: "海军上将"
- usefulheirs.3130.name: "陆军上将"
- usefulheirs.3140.name: "科学家"
  usefulheirs.3110.desc: "谁有资格成为帝国的继承人？"
  usefulheirs.3110.back: "没有人值得。"
  usefulheirs.3110.heir_maybe_1: "§Y[heir_maybe_1.GetName]§!"
@@ -56,20 +55,27 @@ l_simp_chinese:
  usefulheirs.3110.heir_maybe_8: "§Y[heir_maybe_8.GetName]§!"
  usefulheirs.3110.heir_maybe_9: "§Y[heir_maybe_9.GetName]§!"
  usefulheirs.3110.heir_maybe_10: "§Y[heir_maybe_10.GetName]§!"
- usefulheirs.3500.name: "§Y加冕准备§!"
- usefulheirs.3500.desc: "当我们为§H[new_chosen_heir.GetName]§!的加冕做准备时，必须决定他们是否会加入皇室。如果不，他们将保留他们与生俱来的名字。"
- usefulheirs.3500.no_name_change: "他们将保留他们与生俱来的名字。"
- usefulheirs.3500.yes_name_change: "他们将加入[ruler.GetSecondName]的家族，接受我们的名字。"
- usefulheirs.3500.yes_name_change.tooltip: "§H[new_chosen_heir.GetName]§!将接受§H[ruler.GetSecondName]§!的名字，成为§H[new_chosen_heir.GetName][ruler.GetSecondName]§!。"
- usefulheirs.3501.name: "§Y新继承人出现§!"
- usefulheirs.3501.desc: "今天在首都举行了盛大的加冕典礼，并在我们整个帝国广播。现在§Y继承人§!登基，§H[new_chosen_heir.GetName]§!被宣布为新的 §Y[root.GetHeirTitle]§!，正如人们所预料的那样，帝国内部也有人表达了不满。曾经的§Y继承人§!，§H[disinherited_heir_first.GetName]§!，仍然有他的支持者。不过，如果有足够的时间，这种不满情绪将会消失。"
- usefulheirs.3501.ad.desc: "按照我们的风俗和传统，今天在首都举行了盛大的加冕典礼，并在我们整个帝国广播。现在继承人登基，§H[new_chosen_heir.GetName]§!被宣布为新的 §Y[root.GetHeirTitle]§!"
- usefulheirs.3810.name: "§R王朝继承人登基§!"
- usefulheirs.3810.desc: "§H[deceased_ruler.GetName]§!没有指定继承人就去世了，打破了传统。作为王朝的下一个继承者，§H[root.ruler.GetName]§!已经登上了王位。这引起了广泛的不安，民众担心新加冕的§Y[root.GetRulerTitle]§!§H[root.ruler.GetName]§!难胜任这项任务。"
- usefulheirs.3810.a: "我们将证明自己。"
- usefulheirs.3910.name: "§R指定的继承人死亡§!"
- usefulheirs.3910.desc: "作为帝国的巨大损失，§Y继承人§!，[deceased_heir.GetTitle]§H[deceased_heir.GetName]§!已经去世。我们需要任命一个新的§Y继承人§!。"
- usefulheirs.3910.a: "悲剧啊。"
+
+ usefulheirs.3400.name: "§Y王朝关注§!"
+ usefulheirs.3400.desc: "当我们准备为§H[new_chosen_heir.GetName]§!加冕时，必须决定他们是否会加入帝国王朝。如果不，他们将保留原来的名字。"
+
+ usefulheirs.3400.no_name_change: "他们将保留与生俱来的名字."
+ usefulheirs.3400.yes_name_change: "他们将加入§H[event_target:dynastic_name_leader.GetName]§!家族并采用我们的名字。"
+ usefulheirs.3400.yes_name_change.tooltip: "§H[new_chosen_heir.GetName]§! 将采用 §H[event_target:dynastic_name_leader.GetName]§! 并被命名为 §H[new_chosen_heir.GetName] [event_target:dynastic_name_leader.GetName]§!."
+
+ usefulheirs.3400.new_heir_name: "[this.GetName] [event_target:dynastic_name_leader.GetName]"
+ saved_dynastic_name: "[root.ruler.GetSecondName]"
+ new_dynastic_name: "[root.GetName]"
+
+ usefulheirs.3500.name: "§Y新继承人出现§!"
+ usefulheirs.3500.desc: "今天在首都举行了盛大的加冕典礼，并在我们整个帝国广播。现在§Y继承人§!登基，§H[new_chosen_heir.GetName]§!被宣布为新的 §Y[root.GetHeirTitle]§!，正如人们所预料的那样，帝国内部也有人表达了不满。曾经的§Y继承人§!，§H[disinherited_heir_first.GetName]§!，仍然有他的支持者。不过，如果有足够的时间，这种不满情绪将会消失。"
+ usefulheirs.3500.ad.desc: "按照我们的风俗和传统，今天在首都举行了盛大的加冕典礼，并在我们整个帝国广播。现在继承人登基，§H[new_chosen_heir.GetName]§!被宣布为新的 §Y[root.GetHeirTitle]§!"
+ uh_adoptive.1110.name: "§R王朝继承人登基§!"
+ uh_adoptive.1110.desc: "打破传统，我们的前任统治者没有指定继承人就去世了。作为王朝的下一个继承人，§H[统治者.GetName]§! 已经登上了王位。这引起了广泛的不安，民众担心新登基的§Y[root.GetRulerTitle]§! §将不适合这个工作。"
+ uh_adoptive.1110.a: "我们将证明自己。"
+ uh_adoptive.2010.name: "§R指定的继承人死亡§!"
+ uh_adoptive.2010.desc: "作为帝国的巨大损失，§Y继承人§!，[deceased_heir.GetTitle]§H[deceased_heir.GetName]§!已经去世。我们需要任命一个新的§Y继承人§!。"
+ uh_adoptive.2010.a: "悲剧啊。"
  heir_fired_name:0 "[event_target:clone_leader_name_1.GetName]"
  heir_name_bold:0 "§H[event_target:heir_leader.GetName]§!"
  heir_name_bold_new:0 "§H[event_target:new_chosen_heir.GetName]§!"
@@ -92,7 +98,8 @@ l_simp_chinese:
  unity_fail_text:0 "§R要求§!§Y500§!£influence£§Y影响力§!"
  civic_adoptive_dynasties: "禅让王朝"
  civic_adoptive_dynasties_desc: "在遥远的过去，一个由无能的统治者组成的王朝导致了这个社会的传统，即君主通常从宫廷中最有能力的人中任命他们的继承人。这导致了一个非常稳定的帝国。然而，在指定继承人之前，继承人仍然是通过绝对长子继承制选择的。"
- civic_tooltip_adoptive_dynasties_effects: "指定继承人没有£stability£§Y稳定度§!惩罚或£influence£§Y影响力§!消耗。一个未被指定的继承人成为统治者将在除首都以外的星球上降低§Y20§!£stability£§Y稳定度§!§R10§!年，首都将降低§Y25§!。"
+ civic_tooltip_adoptive_dynasties_effects: "指定继承人没有£stability£§Y稳定度§!惩罚或£influence£§Y影响力§!消耗。"
+ civic_tooltip_adoptive_dynasties_negative_effects: "一个未被指定的继承人成为统治者将在除首都以外的星球上降低§R20§!£stability£§Y稳定度§!§Y10年§!，首都将降低§R25§!。"
  chose_new_heir: "新继承人"
  chose_new_heir_desc: "新继承人的任命对这个星球上的统治者造成了一些干扰。他们需要一些时间来适应这个新的现实。"
  chose_new_heir_capital: "新继承人"
@@ -101,3 +108,10 @@ l_simp_chinese:
  dynastic_heir_desc: "由于过去的创伤，新的王朝统治者在这个星球上造成了相当大的灾难。"
  dynastic_heir_capital: "王朝统治者"
  dynastic_heir_capital_desc: "由于过去的创伤，新的王朝统治者在首都上造成了相当大的灾难。"
+
+ # Councilors
+ councilor_adoptive_dynasties:0 "推定继承人"
+ councilor_adoptive_dynasties_female:0 "推定继承人"
+ councilor_adoptive_dynasties_desc:0 "为了给他们最终的继承做准备 $TITLE$ 接受关于如何管理王国的广泛培训."
+ mod_councilor_adoptive_dynasties_exp_gain: "$councilor_adoptive_dynasties_official_with_icon$ $exp_gain$"
+ councilor_adoptive_dynasties_official_with_icon:0 "£ruler£ $councilor_adoptive_dynasties$"
